Add hide error message in form

--- a/public/style/forms.less
+++ b/public/style/forms.less
@@ -7,6 +7,9 @@
         .border-radius(3px);
         color:@RED;
         .font(sans);
+        &.hide{
+            display:none;
+        }
     }
     fieldset{
         border-bottom:1px solid @GREY_LIGHT;
