start adding parce page

--- a/public/style/style.less
+++ b/public/style/style.less
@@ -40,6 +40,7 @@
 @import "@{PAGES_PATH}/homepage.less";
 @import "@{PAGES_PATH}/add.less";
 @import "@{PAGES_PATH}/search.less";
+@import "@{PAGES_PATH}/parcel.less";
 
 @import "./forms.less";
 @import "./common-elements.less";
