remove var_dump, whitepage on success

--- a/app/views/form/form.success.phtml
+++ b/app/views/form/form.success.phtml
@@ -1,1 +1,6 @@
-OK !
+<div class="container">
+
+    <div id="content" class="col-md-12">
+        <?= t("Merci d'avoir rempli le formulaire !"); ?>
+    </div>
+</div>
