--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -81,8 +81,9 @@ less = {env: "development"};
                 <a href="http://blog.gamping.com" class="link_legal">Blog</a>
                 <a href="http://www.gamping.com/press/?lang=fr" class="link_legal">Presse</a>
 
-                <a href="?lang=us"><img src="/images/flag_us.gif" alt="us"></a>
-                <a href="?lang=es"><img src="/images/Spanish.gif" alt="es"></a>
+                <a href="<?= WEBSITE_FR ?>"><img src="/images/flag_fr.gif" alt="fr"></a>
+                <a href="<?= WEBSITE_EN ?>"><img src="/images/flag_us.gif" alt="us"></a>
+                <a href="<?= WEBSITE_ES ?>"><img src="/images/flag_es.gif" alt="es"></a>
             </div>
         </div>
     </div>
