--- a/app/views/parcel/parcel.phtml
+++ b/app/views/parcel/parcel.phtml
@@ -2,6 +2,96 @@
 
     <div id="content" class="col-md-9">
         <div id="picture" data-backstretch-image= "http://www.gamping.com/wp-content/uploads/2013/11/P10109951-716x287.jpg"></div>
+
+        <div class="row">
+            <div class="col-md-9">
+                <p class="place-info">Saint Sylvain, France (Limousin)</p>
+
+                <p class="allowing">
+                    <?= t('Terrain pour :') ?>
+                    <i class="allow-tent not-allowed" title="<?= t('Tentes autorisées') ?>"></i>
+                    <i class="allow-caravan" title="<?= t('Caravanes autorisées') ?>"></i>
+                    <i class="allow-campingcar not-allowed" title="<?= t('Camping car autorisés') ?>"></i>
+                </p>
+
+                <p>L’espace champêtre est aussi composé d’un hébergement en chambres d’hôtes, à disposition une cuisine d’été Salle d’eau avec douche et une terrasse couverte partagée. Situé sur la faille géologique d’Argentat, le site offre des paysages uniques en Corrèze. Proche des pôles touristiques majeurs de la Corrèze et du Lot. Au départ de circuits de petite randonnées a 10km de la vallée de la Dordogne (canoé, parapente, escalade)</p>
+
+                <hr />
+
+                <h2 class="h2 services"><?= t('Services') ?></h2>
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <ul class="available">
+                            <li class="yes">Pin ups</li>
+                            <li>Carmabar</li>
+                            <li class="yes">Couette</li>
+                            <li class="yes">Taxi</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="available">
+                            <li>Pin ups</li>
+                            <li class="yes">Carmabar</li>
+                            <li>Couette</li>
+                            <li class="yes">Taxi</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="available">
+                            <li class="yes">Pin ups</li>
+                            <li class="yes">Carmabar</li>
+                            <li class="yes">Couette</li>
+                            <li class="yes">Taxi</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <hr />
+
+                <h2 class="h2 services"><?= t('Activités') ?></h2>
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <ul class="available">
+                            <li class="yes">Siestes</li>
+                            <li>Natation</li>
+                            <li class="yes">Golf</li>
+                            <li class="yes">Karaté</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="available">
+                            <li class="yes">Siestes</li>
+                            <li>Natation</li>
+                            <li class="yes">Golf</li>
+                            <li class="yes">Karaté</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="available">
+                            <li class="yes">Siestes</li>
+                            <li>Natation</li>
+                            <li class="yes">Golf</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 r">
+
+                <!-- display price here. Need icon :( -->
+
+                <p class="notice"><em>Les prix sont indicatifs. Contactez l'hôte même si le prix ne vous convient pas.</em></p>
+
+                <a href="#" class="contact-host"><?= t("Contacter l'hôte") ?></a>
+
+
+            </div>
+        </div>
+
+
+
     </div>
     <div class="col-md-3 sidebar">
         <div class="widget">
